feat: finish main part of the game